# NeraJob

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  STUB.md  fix_17.py  pyproject.toml
config/: example_greenhouse_boards.json
data/: scan-preset.json
data/cv/: cv-backend-engineer.md  cv-backend-engineer.txt  cv-python-backend.md  cv-python-backend.txt  cv-ros2-integration-engineer.md  cv-senior-python-backend-engineer.md  cv-senior-python-backend-engineer.txt  (+2 more)
docs/: BOUNTY.md  ETHICAL_SCRAPING.md  SCRAPING_POLICY.md  SKILL_ALIASES.md  SOURCES.md  skill_aliases_cybersecurity.md  skill_aliases_data_engineering.md  skill_aliases_ml_mlops.md
scripts/: capture_gui_shots.py  create-scraper-bounties.mjs
tests/: test_adzuna.py  test_adzuna_scraper.py  test_application_tracker.py  test_arbeitnow.py  test_arbeitnow_scraper.py  test_cli.py  test_cli_dedupe.py  test_cv_builder.py  test_cybersecurity.py  test_dedupe.py  test_export_jobs.py  test_findwork.py  test_fixture_packs.py  test_github_jobs.py  test_greenhouse.py  test_himalayas.py  test_himalayas_scraper.py  test_http.py  test_http_client.py  test_jobicy.py  test_jobicy_scraper.py  test_jooble.py  test_location_filter.py  test_match.py  test_match_precision.py  test_match_score.py  test_match_sort.py  test_min_salary_filter.py  test_offline_match_cli.py  test_opire_scraper.py  test_profile.py  test_remote_boost.py  test_remotive.py  test_remotive_scraper.py  test_salary_filter.py  test_scan_preset.py  test_skill_aliases.py  test_skill_extract.py  test_skills_extract.py  test_skills_gap.py  (+7 more)
(+67 files in other folders)
